--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 </div>
                 <br>
                 <p>
-                  <b style="color: #ac530f">I will be at CVPR from June 17 - 20, and I am looking for full-time positions starting in Summer 2025. <br> Please reach out to chat if you are interested in working with me!</b>
+                  <b style="color: #ac530f">I am looking for full-time positions starting in Summer 2025. Please reach out if you are interested in working with me!</b>
                 </p>
                 <!-- <img src="images/research_direction.png" width="80%"> -->
                 <!-- <p>
@@ -178,32 +178,6 @@
                 </div>
                 <div align="justify">
                   TL;DR: We introduce Knowledge Bottlenecks (KnoBo) that incorporate priors from medical documents, such as PubMed, through inherently interpretable models. KnoBo is robust to domain shifts in medical images, e.g., data sampled from different hospitals or data confounded by demographic variables such as sex, race, etc. Overall, our work demonstrates that a key missing ingredient for robustness to distribution shift in medical imaging models is a prior rooted in knowledge.
-                </div>
-              </td>
-            </tr>
-
-            <tr>
-              <td width="30%">
-                <video poster="" autoplay="" muted loop="" style="pointer-events: none; width: 220px;">
-                  <source src="images/como_demo.mp4" type="video/mp4">
-                </video>
-              </td>
-              <td width="70%" valign="middle">
-                <div class="title">
-                  <a href="papers/como.pdf"><b>CoMo: Controllable Motion Generation through Language Guided Pose Code Editing</b></a>
-                </div>
-                <div class="authors">
-                  Yiming Huang, Weilin Wan, <strong>Yue Yang</strong>, Chris Callison-Burch, Mark Yatskar, Lingjie Liu
-                </div>
-                <div class="venue">
-                    arxiv, 2024
-                </div>
-                <div class="tags">
-                  <a href="https://arxiv.org/abs/2403.13900">arxiv</a> /
-                  <a href="https://yh2371.github.io/como/">website</a>
-                </div>
-                <div align="justify">
-                  TL;DR: CoMo is a controllable human motion generation model that encodes motion into interpretable pose codes representing body part semantics. Leveraging pose codes as interpretable representations, an LLM can directly intervene in motion editing by adjusting the pose codes according to editing instructions.
                 </div>
               </td>
             </tr>
@@ -386,6 +360,32 @@
               <td width="70%" valign="right">
                 <div align="right">
                   <a href="javascript:void(0);" onclick="showShortList()">Selected Publications</a>
+                </div>
+              </td>
+            </tr>
+
+            <tr>
+              <td width="30%">
+                <video poster="" autoplay="" muted loop="" style="pointer-events: none; width: 220px;">
+                  <source src="images/como_demo.mp4" type="video/mp4">
+                </video>
+              </td>
+              <td width="70%" valign="middle">
+                <div class="title">
+                  <a href="papers/como.pdf"><b>CoMo: Controllable Motion Generation through Language Guided Pose Code Editing</b></a>
+                </div>
+                <div class="authors">
+                  Yiming Huang, Weilin Wan, <strong>Yue Yang</strong>, Chris Callison-Burch, Mark Yatskar, Lingjie Liu
+                </div>
+                <div class="venue">
+                  <i>European Conference on Computer Vision (<b>ECCV</b>)</i>, 2024
+                </div>
+                <div class="tags">
+                  <a href="https://arxiv.org/abs/2403.13900">arxiv</a> /
+                  <a href="https://yh2371.github.io/como/">website</a>
+                </div>
+                <div align="justify">
+                  TL;DR: CoMo is a controllable human motion generation model that encodes motion into interpretable pose codes representing body part semantics. Leveraging pose codes as interpretable representations, an LLM can directly intervene in motion editing by adjusting the pose codes according to editing instructions.
                 </div>
               </td>
             </tr>
