update fake news paper

--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
               </td>
               <td width="70%" valign="middle">
                 <div class="title">
-                  <a href="papers/knobo.pdf"><b>MiRAGeNews: Multimodal Realistic AI-Generated News Detection</b></a>
+                  <a href="papers/MiRAGeNews.pdf"><b>MiRAGeNews: Multimodal Realistic AI-Generated News Detection</b></a>
                 </div>
                 <div class="authors">
                   Runsheng Huang, Liam Dugan, Yue Yang, Chris Callison-Burch.
