--- a/index.html
+++ b/index.html
@@ -62,15 +62,15 @@
     </script>
   </head>
   <body>
-    <div class="sidebar">
+    <!-- <div class="sidebar">
       <a href="#about">About Me</a>
       <a href="#shortList">Publications</a>
       <a href="#education">Education</a>
       <a href="#experience">Experience</a>
-    </div>
+    </div> -->
 
     <!-- Right Sidebar -->
-    <div class="right-sidebar"></div>
+    <!-- <div class="right-sidebar"></div> -->
 
     <table width="930" border="0" align="center" cellspacing="0" cellpadding="0">
       <tr>
@@ -696,7 +696,7 @@
               <table>
                 <tr>
                   <td width="25%">
-                    <img src="images/ai2.png" height=40px style="display: flex; justify-content: center;">
+                    <img src="images/Ai2_logo_pink_RGB.png" height=35px style="display: flex; justify-content: center;">
                   </td>
                   <td width="75%">
                     <a href="https://prior.allenai.org"><b>Allen Institute for AI</b></a>, Seattle, WA, USA<br>
