--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <td width="100%" valign="middle">
               <heading id="about">About me</heading>
                 <div class="text" align="justify">
-                  <p class="light">Hi! My name is Yue Yang (杨樾). I am a final-year Ph.D. student in Computer and Information Science at the University of Pennsylvania, affiliated with <a href="https://nlp.cis.upenn.edu">Penn NLP</a>. I am grateful to be advised by <a href="https://www.cis.upenn.edu/~ccb/">Prof. Chris Callison-Burch</a> and <a href="https://www.cis.upenn.edu/~myatskar/">Prof. Mark Yatskar</a>. I am interested in the intersection area of Natural Language Processing (NLP) and Computer Vision (CV).
+                  <p class="light">Hi! My name is Yue Yang (杨樾). I am a final-year Ph.D. candidate in Computer and Information Science at the University of Pennsylvania, affiliated with <a href="https://nlp.cis.upenn.edu">Penn NLP</a>. I am grateful to be advised by <a href="https://www.cis.upenn.edu/~ccb/">Prof. Chris Callison-Burch</a> and <a href="https://www.cis.upenn.edu/~myatskar/">Prof. Mark Yatskar</a>. I am interested in the intersection area of Natural Language Processing (NLP) and Computer Vision (CV).
                   </p>
                 </div>
                 <div class="text" align="justify">
@@ -250,7 +250,9 @@
                   <a href="https://molmo.allenai.org/blog">blog</a> /
                   <a href="https://molmo.allenai.org">demo</a> /
                   <a href="https://molmo.allenai.org/paper.pdf">report</a> /
-                  <a href="https://huggingface.co/collections/allenai/molmo-66f379e6fe3b8ef090a8ca19">models</a>
+                  <a href="https://huggingface.co/collections/allenai/molmo-66f379e6fe3b8ef090a8ca19">models</a> /
+                  <a href="https://huggingface.co/collections/allenai/pixmo-674746ea613028006285687b">data</a> /
+                  <a href="https://github.com/allenai/molmo">code</a>
                 </div>
               </td>
             </tr>
@@ -744,7 +746,7 @@
                 <strong>Reviewer</strong>: <br>
                 Computer Vision: CVPR, ECCV, SIGGRAPH Asia. <br>
                 Natural Language Processing: ACL, EMNLP, NAACL, EACL, COLM. <br>
-                Machine Learning: NeurIPS, TMLR, ICLR. <br>
+                Machine Learning: NeurIPS, ICLR, ICML, TMLR. <br>
               </td>
             </tr>
             </table>
