change cosyn arxiv

--- a/cosyn/index.html
+++ b/cosyn/index.html
@@ -161,7 +161,7 @@
               </span>
               <!-- arxiv Link. -->
               <span class="link-block">
-                <a href="https://arxiv.org/abs/2405.14839"
+                <a href="https://arxiv.org/abs/2502.14846"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
@@ -189,7 +189,7 @@
                   <span>Data</span>
                   </a>
               </span>
-              <span class="link-block">
+              <!-- <span class="link-block">
                 <a href="https://x.com/YueYangAI/status/1794031734775820432"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
@@ -197,7 +197,7 @@
                   </span>
                   <span>Tweet</span>
                   </a>
-              </span>
+              </span> -->
               <br>
             </div>
           </div>
@@ -655,7 +655,7 @@
         <h2 class="title is-3">CoSyn can Generate Targeted Data for Domain Generalization</h2>
         <div class="content has-text-justified">
           <p>
-            We identify a key limitation of open-source VLMs that they struggle to generalize to out-of-domain tasks they were not trained on. However, CoSyn enables controllable data generation, allowing task-specific fine-tuning to achieve strong generalization performance with significantly less data.
+            We identify a key limitation of open-source VLMs that they struggle to generalize to out-of-domain tasks they were not trained on. However, CoSyn enables controllable data generation, allowing task-specific fine-tuning to achieve strong generalization performance with significantly less data. Download <a href="https://huggingface.co/yyupenn/NutritionQA">NutritionQA</a>.
           </p>
         </div>
 
@@ -807,11 +807,11 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title is-3">BibTeX</h2>
-    <pre style="font-size: 16px;"><code>@article{yang2025code,
+    <pre style="font-size: 16px;"><code>@article{yang2025scaling,
       title={Scaling Text-Rich Image Understanding via Code-Guided Synthetic Multimodal Data Generation}, 
       author={Yue Yang and Ajay Patel and Matt Deitke and Tanmay Gupta and Luca Weihs and Andrew Head and Mark Yatskar and Chris Callison-Burch and Ranjay Krishna and Aniruddha Kembhavi and Christopher Clark},
-      journal={arXiv preprint arXiv:2405.14839},
-      year={2024}
+      journal={arXiv preprint arXiv:2502.14846},
+      year={2025}
 }</code></pre>
   </div>
 </section>
@@ -823,7 +823,7 @@
       <a class="icon-link" href="../papers/cosyn.pdf" class="external-link" disabled>
         <i class="fas fa-file-pdf"></i>
       </a>
-      <a class="icon-link" href="https://arxiv.org/abs/2405.14839" class="external-link" disabled>
+      <a class="icon-link" href="https://arxiv.org/abs/2502.14846" class="external-link" disabled>
         <i class="ai ai-arxiv"></i>
       </a>
       <a class="icon-link" href="https://github.com/allenai/pixmo-docs" class="external-link" disabled>
@@ -832,9 +832,9 @@
       <a class="icon-link" href="https://huggingface.co/datasets/allenai/pixmo-docs" class="external-link" disabled>
         <i class="fa fa-database"></i>
       </a>
-      <a class="icon-link" href="https://x.com/YueYangAI/status/1794031734775820432" class="external-link" disabled>
+      <!-- <a class="icon-link" href="https://x.com/YueYangAI/status/1794031734775820432" class="external-link" disabled>
         <i class="fab fa-twitter"></i>
-      </a>
+      </a> -->
     </div>
     <div class="columns is-centered">
       <div class="column is-8">
