--- a/cosyn/index.html
+++ b/cosyn/index.html
@@ -181,12 +181,21 @@
               </span>
               <!-- Data Link. -->
               <span class="link-block">
-                <a href="https://github.com/allenai/pixmo-docs"
+                <a href="https://huggingface.co/datasets/allenai/CoSyn-400K"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fa fa-database"></i>
                   </span>
-                  <span>Data</span>
+                  <span>CoSyn-400K</span>
+                  </a>
+              </span>
+              <span class="link-block">
+                <a href="https://huggingface.co/datasets/allenai/CoSyn-point"
+                   class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon">
+                      <i class="fa fa-database"></i>
+                  </span>
+                  <span>CoSyn-Point</span>
                   </a>
               </span>
               <!-- <span class="link-block">
@@ -679,7 +688,7 @@
         <h2 class="title is-3">Synthetic Pointing Data for Agentic Tasks</h2>
         <div class="content has-text-justified">
           <p>
-            We synthesize pointing data by prompting an LLM to generate pointing questions and edit the code to draw the points explicitly. By extracting the pixel values of these points, we can obtain their exact coordinates. We show that the VLM trained on our synthetic pointing data can generalize to real GUI agentic tasks.
+            We synthesize pointing data by prompting an LLM to generate pointing questions and edit the code to draw the points explicitly. By extracting the pixel values of these points, we can obtain their coordinates. We show that VLMs trained on our synthetic pointing data can generalize to real agentic tasks. Download <a href="https://huggingface.co/datasets/allenai/CoSyn-point">CoSyn-point</a>.
           </p>
         </div>
 
@@ -808,8 +817,8 @@
   <div class="container is-max-desktop content">
     <h2 class="title is-3">BibTeX</h2>
     <pre style="font-size: 16px;"><code>@article{yang2025scaling,
-      title={Scaling Text-Rich Image Understanding via Code-Guided Synthetic Multimodal Data Generation}, 
-      author={Yue Yang and Ajay Patel and Matt Deitke and Tanmay Gupta and Luca Weihs and Andrew Head and Mark Yatskar and Chris Callison-Burch and Ranjay Krishna and Aniruddha Kembhavi and Christopher Clark},
+      title={Scaling Text-Rich Image Understanding via Code-Guided Synthetic Multimodal Data Generation},
+      author={Yang, Yue and Patel, Ajay and Deitke, Matt and Gupta, Tanmay and Weihs, Luca and Head, Andrew and Yatskar, Mark and Callison-Burch, Chris and Krishna, Ranjay and Kembhavi, Aniruddha and others},
       journal={arXiv preprint arXiv:2502.14846},
       year={2025}
 }</code></pre>
@@ -829,7 +838,7 @@
       <a class="icon-link" href="https://github.com/allenai/pixmo-docs" class="external-link" disabled>
         <i class="fab fa-github"></i>
       </a>
-      <a class="icon-link" href="https://huggingface.co/datasets/allenai/pixmo-docs" class="external-link" disabled>
+      <a class="icon-link" href="https://huggingface.co/datasets/allenai/CoSyn-400K" class="external-link" disabled>
         <i class="fa fa-database"></i>
       </a>
       <!-- <a class="icon-link" href="https://x.com/YueYangAI/status/1794031734775820432" class="external-link" disabled>
