--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <td width="100%" valign="middle">
               <heading id="about">About me</heading>
                 <div class="text" align="justify">
-                  <p class="light">Hi! My name is Yue Yang (杨樾). I am a final-year Ph.D. candidate in Computer and Information Science at the University of Pennsylvania, affiliated with <a href="https://nlp.cis.upenn.edu">Penn NLP</a>. I am grateful to be advised by <a href="https://www.cis.upenn.edu/~ccb/">Prof. Chris Callison-Burch</a> and <a href="https://www.cis.upenn.edu/~myatskar/">Prof. Mark Yatskar</a>. I am interested in the intersection area of Natural Language Processing (NLP) and Computer Vision (CV).
+                  <p class="light">Hi! My name is Yue Yang (杨樾). I am a final-year Ph.D. candidate in Computer and Information Science at the University of Pennsylvania, and an incoming research scientist at <a href="https://allenai.org/">Ai2</a>. I am grateful to be advised by <a href="https://www.cis.upenn.edu/~ccb/">Prof. Chris Callison-Burch</a> and <a href="https://www.cis.upenn.edu/~myatskar/">Prof. Mark Yatskar</a>. I am interested in the intersection area of Natural Language Processing (NLP) and Computer Vision (CV).
                   </p>
                 </div>
                 <div class="text" align="justify">
@@ -150,9 +150,6 @@
                   </div>
                 </div>
                 <br>
-                <p>
-                  <b style="color: #ac530f">I am looking for full-time positions starting in Summer 2025. Please reach out if you are interested in working with me!</b>
-                </p>
             </td>
           </tr>
           </table>
@@ -167,6 +164,28 @@
               <td width="70%" valign="right">
                 <div align="right">
                   <a href="javascript:void(0);" onclick="showFullList()">Full List of Publications</a>
+                </div>
+              </td>
+            </tr>
+
+            <tr>
+              <td width="30%">
+                <img src="images/cosyn.png" width="100%">
+              </td>
+              <td width="70%" valign="middle">
+                <div class="title">
+                  <a href="papers/cosyn.pdf"><b>CoSyn: Scaling Text-Rich Image Understanding via Code-Guided Synthetic Multimodal Data Generation</b></a>
+                </div>
+                <div class="authors">
+                  <strong>Yue Yang</strong>*, Ajay Patel*, Matt Deitke, Tanmay Gupta, Luca Weihs, Andrew Head, Mark Yatskar, Chris Callison-Burch, Ranjay Krishna, Aniruddha Kembhavi, Christopher Clark
+                </div>
+                <div class="venue">
+                  <i>In submission</i>, 2025
+                </div>
+                <div class="tags">
+                  <a href="https://yueyang1996.github.io/cosyn/">website</a> /
+                  <a href="https://huggingface.co/datasets/allenai/CoSyn-400K">data</a> /
+                  <a href="https://github.com/allenai/pixmo-docs">code</a>
                 </div>
               </td>
             </tr>
@@ -744,6 +763,12 @@
             <td width="100%" valign="middle">
               <heading>Talks</heading>
               <table>
+                <tr>
+                  <td width="100%">
+                    <b>Ai2 Job Talk</b>, Allen Institute for Artificial Intelligence, Seattle, WA, USA<br>
+                    <i>Language Priors for Visual Intelligence</i>, Jan 22, 2025. <a href="https://www.youtube.com/watch?v=FOhGPWInO-U&ab_channel=Ai2">video</a> 
+                  </td>
+                </tr>
                 <tr>
                   <td width="100%">
                     <b>WPE-II Presentation</b>, University of Pennsylvania, Philadelphia, PA, USA<br>
